# jellyrin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dlna.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
.claude/specs/in-progress/: livetv-hdhomerun-real.md  livetv-hls-transcode.md  livetv-recording-real.md  livetv-series-timer-real.md  livetv-stream-sharing-refcount.md  livetv-tuner-limit.md
crates/jellyrin-api/: Cargo.toml
crates/jellyrin-api/examples/: validate_imported_api.rs
crates/jellyrin-api/src/: dlna.rs  file_watcher.rs  lib.rs  live_tv_xtream.rs
crates/jellyrin-compat/: Cargo.toml
crates/jellyrin-compat/src/: lib.rs
crates/jellyrin-core/: Cargo.toml
crates/jellyrin-core/src/: lib.rs
crates/jellyrin-db/: Cargo.toml
crates/jellyrin-db/examples/: upsert_admin_user.rs  validate_imported_db.rs
crates/jellyrin-db/migrations/: 202605230001_initial.sql  202605230002_startup_auth.sql  202605230003_virtual_folders.sql  202605230004_api_keys.sql  202605230005_media_items.sql  202605230006_playback_states.sql  202605230007_media_item_scan_state.sql  202605230008_task_runs.sql  202605230009_active_playback_sessions.sql  202605230010_branding_config.sql  202605230011_display_preferences.sql  202605230012_user_configurations.sql  202605230013_device_capabilities.sql  202605230014_system_configuration_payloads.sql  202605240001_activity_log_entries.sql  202605240002_backup_manifests.sql  202605240003_named_configurations.sql  202605240004_chapter_metadata_config.sql  202605240005_server_configuration_options.sql  202605250001_media_item_media_info.sql  202605250002_active_playback_stream_indexes.sql  202605250003_playback_state_stream_indexes.sql  202605250004_transcode_sessions.sql  202605250005_transcode_session_dedupe_key.sql  202605250006_transcode_session_device_id.sql  202605250007_media_item_versions.sql  202605250008_trickplay_infos.sql  202605250009_quick_connect_sessions.sql  202605250010_media_item_metadata.sql  202605250011_media_lists.sql  202605250012_media_item_lyrics.sql  202605250013_user_item_data_fields.sql  202605250014_media_list_user_permissions.sql  202605250015_media_item_deletions.sql  202605250016_active_viewing_sessions.sql  202605250017_active_session_users.sql  202605250018_activity_log_item_id.sql  202605270001_backup_restore_snapshots.sql  202605310001_plugin_platform_state.sql  202605310002_user_syncplay_access.sql  (+4 more)
crates/jellyrin-db/src/: lib.rs
crates/jellyrin-plugin-host-dotnet/: Cargo.toml
crates/jellyrin-plugin-host-dotnet/src/: main.rs
crates/jellyrin-plugin-host-dotnet/tests/: stdio_smoke.rs
crates/jellyrin-plugin-host-wasi/: Cargo.toml
crates/jellyrin-plugin-host-wasi/src/: main.rs
crates/jellyrin-plugin-host-wasi/tests/: stdio_smoke.rs
crates/jellyrin-plugin-rpc/: Cargo.toml
crates/jellyrin-plugin-rpc/src/: lib.rs
crates/jellyrin-plugin-sdk/: Cargo.toml
crates/jellyrin-plugin-sdk/src/: lib.rs
crates/jellyrin-server/: Cargo.toml
crates/jellyrin-server/src/: main.rs
crates/jellyrin-transcode/: Cargo.toml
crates/jellyrin-transcode/src/: lib.rs
crates/jellyrin-xtream-provider/: Cargo.toml
crates/jellyrin-xtream-provider/src/: lib.rs
ops/: jellyrin-rust-dev.service  jellyrin.env.example  jellyrin.service  release-checklist.md
qa/: README.md  acceptance-runner.js  packaging-release.js  performance-recovery.js  playback-compat-runner.js  release-install-smoke.js  security-hardening.js  systemd-runtime-smoke.js  systemd-unit-smoke.js  xtream-configure-jellyrin.js  xtream-probe.js
qa/e2e/: deployed-item-detail.spec.js  deployed-live-tv-hls.spec.js  deployed-login.spec.js  deployed-playback-hls.spec.js  deployed-playback-web.spec.js  wizard.spec.js
qa/golden/: api-parity.js  browser-trace.js  channels-provider-evidence.js  channels-provider-trace-evidence.js  channels-providers.js  channels-runner.js  dlna-device-evidence.js  dlna-device-fixture.js  dlna-device-preflight.js  dlna-device-runner.js  dlna-discovery.js  dlna-events.js  dlna-upnp.js  dto-parity.js  ecosystem-parity.js  ecosystem-placeholder.js  ecosystem-release.js  evidence-dashboard.js  livetv-device-evidence.js  livetv-real.js  livetv-runner.js  livetv-simulator-acceptance.js  non-web-clients-runner.js  non-web-clients.js  non-web-contract-acceptance.js  non-web-device-evidence.js  plugin-dual-runtime.js  plugin-release-acceptance.js  startup-wizard-runner.js  syncplay-advanced.js  syncplay-runner.js
qa/golden/fixtures/: hdhomerun-sim.js
scripts/: apply_jellyfin_series_metadata.sql  audit_jellyfin_section_parity.mjs  import_jellyfin_sqlite.sql
