[workspace]
members = [
    "crates/jellyrin-api",
    "crates/jellyrin-compat",
    "crates/jellyrin-core",
    "crates/jellyrin-db",
    "crates/jellyrin-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/alseif0x/jellyrin"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
http-body-util = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time", "uuid", "migrate"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "net", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
tempfile = "3.23"
