[package]
name = "jellyrin-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
jellyrin-compat = { path = "../jellyrin-compat" }
jellyrin-core = { path = "../jellyrin-core" }
jellyrin-db = { path = "../jellyrin-db" }
jellyrin-transcode = { path = "../jellyrin-transcode" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio.workspace = true
tower.workspace = true
tempfile.workspace = true
