[package]
name = "jellyrin-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
jellyrin-compat = { path = "../jellyrin-compat" }
jellyrin-core = { path = "../jellyrin-core" }
jellyrin-db = { path = "../jellyrin-db" }
jellyrin-plugin-rpc = { path = "../jellyrin-plugin-rpc" }
jellyrin-transcode = { path = "../jellyrin-transcode" }
jellyrin-xtream-provider = { path = "../jellyrin-xtream-provider" }
notify.workspace = true
notify-debouncer-mini.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
http-body-util.workspace = true
serial_test.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
tempfile.workspace = true
