[package]
name = "jellyrin-plugin-host-dotnet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
jellyrin-plugin-rpc = { path = "../jellyrin-plugin-rpc" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
