[package]
name = "jellyrin-plugin-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable Rust/WASI plugin SDK types for Jellyrin plugins"

[dependencies]
serde.workspace = true
serde_json.workspace = true
