[package]
name = "jellyrin-xtream-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jellyrin-core = { path = "../jellyrin-core" }
jellyrin-db = { path = "../jellyrin-db" }
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
